--- a/PiscisOutOffice/app/src/main/AndroidManifest.xml
+++ b/PiscisOutOffice/app/src/main/AndroidManifest.xml
@@ -12,14 +12,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MenuPasswordRepartidoresActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".view.MenuPasswordComercialesActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".view.MenuInicioActivity"
             android:exported="true">
-            <intent-filter>
+          <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
