--- a/PiscisOutOffice/app/src/main/AndroidManifest.xml
+++ b/PiscisOutOffice/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <activity
-            android:name=".view.MenuLoginActivity"
+            android:name=".view.autenticacion.MenuAutenticacionActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
