--- a/PiscisOutOffice/app/build.gradle
+++ b/PiscisOutOffice/app/build.gradle
@@ -63,4 +63,28 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-}
+
+    // Para cargar imagenes desde una URL
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+    // A PARTIR DE AQUI DEFINIMOS LAS DEPENDENCIAS DE ROOM
+    def room_version = "2.4.2"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // optional - RxJava2 support for Room
+//    implementation "androidx.room:room-rxjava2:$room_version"
+
+    // optional - RxJava3 support for Room
+//     implementation "androidx.room:room-rxjava3:$room_version"
+
+    // optional - Guava support for Room, including Optional and ListenableFuture
+//    implementation "androidx.room:room-guava:$room_version"
+
+    // optional - Test helpers
+//    testImplementation "androidx.room:room-testing:$room_version"
+
+    // optional - Paging 3 Integration
+//    implementation "androidx.room:room-paging:2.5.0-alpha02"
+    }
