--- a/PiscisOutOffice/app/build.gradle
+++ b/PiscisOutOffice/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation files('libs\\jtds-1.3.1.jar')
     testImplementation 'junit:junit:4.13.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.6.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -72,6 +73,8 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+//    implementation "androidx.lifecycle:lifecycle-runtime:2.4.1"
 
     // optional - RxJava2 support for Room
 //    implementation "androidx.room:room-rxjava2:$room_version"
